feat: add premium UI components, Django Unfold admin, and Telegram bot setup
- Add new UI components: CartSheet, QuickViewModal, HeroBanner, BottomNav, Toast
- Implement Django Unfold admin theme with gold color scheme
- Add ProductImage model with external URL support
- Fix browser compatibility for Telegram WebApp SDK
- Configure CORS for development environment
- Add seed data and management commands
- Setup Telegram bot with aiogram 3.x

--- a/.gitignore
+++ b/.gitignore
@@ -167,3 +167,10 @@ celerybeat.pid
 sessions/
 *.session
 *.session-journal
+
+# ============================================================================
+# CLAUDE
+# ============================================================================
+.claude/
+claude_usage_log.txt
+CLAUDE.md
