--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,9 @@ djangorestframework>=3.14,<4.0
 django-cors-headers>=4.3,<5.0
 django-filter>=23.5,<24.0
 
+# Admin
+django-unfold>=0.40.0
+
 # Database
 psycopg2-binary>=2.9,<3.0
 
